Make compat with Java 11